Java 9, & refactoring